feat(s3stream): limit s3 wal object size
Signed-off-by: SSpirits <admin@lv5.moe>