@@ -14,6 +14,7 @@ package com.automq.stream.s3.wal.impl.object;
 import com.automq.stream.s3.ByteBufAlloc;
 import com.automq.stream.s3.operator.ObjectStorage;
 import com.automq.stream.s3.wal.AppendResult;
+import com.automq.stream.s3.wal.common.RecordHeader;
 import com.automq.stream.s3.wal.exception.OverCapacityException;
 import com.automq.stream.s3.wal.exception.WALFencedException;
 import com.automq.stream.s3.wal.metrics.ObjectWALMetricsManager;
@@ -28,6 +29,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ConcurrentNavigableMap;
 import java.util.concurrent.ConcurrentSkipListMap;
@@ -48,7 +50,7 @@ public class RecordAccumulator implements Closeable {
     private static final long DEFAULT_UPLOAD_TIMEOUT = TimeUnit.SECONDS.toNanos(5);
 
     private final ReentrantLock lock = new ReentrantLock();
-    private List<Record> bufferList = new LinkedList<>();
+    private ConcurrentLinkedDeque<Record> bufferQueue = new ConcurrentLinkedDeque<>();
     private final ConcurrentNavigableMap<Long /* inclusive first offset */, List<Record>> uploadMap = new ConcurrentSkipListMap<>();
     private final ConcurrentNavigableMap<Long /* exclusive end offset */, WALObject> objectMap = new ConcurrentSkipListMap<>();
 
@@ -98,8 +100,8 @@ public class RecordAccumulator implements Closeable {
                 try {
                     long firstOffset = Long.parseLong(parts[parts.length - 1]);
                     long length = object.size();
-                    long lastOffset = firstOffset + length - 1;
-                    objectMap.put(lastOffset, new WALObject(path, firstOffset, length));
+                    long endOffset = firstOffset + length;
+                    objectMap.put(endOffset, new WALObject(path, firstOffset, length));
                 } catch (NumberFormatException e) {
                     // Ignore invalid path
                     log.warn("Found invalid wal object: {}", path);
@@ -113,16 +115,16 @@ public class RecordAccumulator implements Closeable {
         // Trigger upload periodically.
         executorService.scheduleWithFixedDelay(() -> {
             long startTime = time.nanoseconds();
+            if (fenced
+                || bufferQueue.isEmpty()
+                || System.currentTimeMillis() - lastUploadTimestamp < config.batchInterval()) {
+                return;
+            }
+
             lock.lock();
             try {
                 if (time.nanoseconds() - startTime > DEFAULT_LOCK_TIMEOUT) {
                     log.warn("Failed to acquire lock in {}ms, cost: {}ms, operation: scheduled_upload", TimeUnit.NANOSECONDS.toMillis(DEFAULT_LOCK_TIMEOUT), TimeUnit.NANOSECONDS.toMillis(time.nanoseconds() - startTime));
-                }
-
-                if (fenced
-                    || bufferList.isEmpty()
-                    || System.currentTimeMillis() - lastUploadTimestamp < config.batchInterval()) {
-                    return;
                 }
 
                 unsafeUpload(false);
@@ -269,10 +271,10 @@ public class RecordAccumulator implements Closeable {
                 throw new OverCapacityException("Too many unflushed bytes.");
             }
 
-            if (!bufferList.isEmpty()
+            if (!bufferQueue.isEmpty()
                 && uploadMap.size() < config.maxInflightUploadCount()
                 && (System.currentTimeMillis() - lastUploadTimestamp >= config.batchInterval()
-                    || nextOffset - bufferList.get(0).offset > config.maxBytesInBatch())) {
+                    || nextOffset - bufferQueue.getFirst().offset > config.maxBytesInBatch())) {
                 unsafeUpload(false);
             }
 
@@ -286,7 +288,7 @@ public class RecordAccumulator implements Closeable {
                 ObjectWALMetricsManager.recordOperationLatency(time.nanoseconds() - startTime, "append", throwable == null);
             });
 
-            bufferList.add(new Record(offset, recordSupplier.apply(offset), future));
+            bufferQueue.offer(new Record(offset, recordSupplier.apply(offset), future));
 
             nextOffset += recordSize;
             bufferedDataBytes.addAndGet(recordSize);
@@ -333,17 +335,9 @@ public class RecordAccumulator implements Closeable {
             });
     }
 
-    // Not thread safe, caller should hold lock.
-    // Visible for testing.
     public void unsafeUpload(boolean force) throws OverCapacityException {
         if (!force) {
             checkWriteStatus();
-        }
-
-        long startTime = time.nanoseconds();
-        // No records to upload
-        if (bufferList.isEmpty()) {
-            return;
         }
 
         // TODO: The number of uploads in progress should not be greater than the number of active S3 connections.
@@ -351,28 +345,70 @@ public class RecordAccumulator implements Closeable {
             throw new OverCapacityException("Too many pending upload");
         }
 
-        Record firstRecord = bufferList.get(0);
-        Record lastRecord = bufferList.get(bufferList.size() - 1);
+        // Trigger upload until the buffer is empty.
+        while (!bufferQueue.isEmpty()) {
+            unsafeUpload();
+        }
+    }
 
-        long firstOffset = firstRecord.offset;
+    // Not thread safe, caller should hold lock.
+    // Visible for testing.
+    public void unsafeUpload() {
+        long startTime = time.nanoseconds();
+
+        // Build data buffer.
+        CompositeByteBuf dataBuffer = ByteBufAlloc.compositeByteBuffer();
+        List<Record> recordList = new LinkedList<>();
+        while (!bufferQueue.isEmpty()) {
+            // The retained bytes in the batch must larger than record header size.
+            long retainedBytesInBatch = config.maxBytesInBatch() - dataBuffer.readableBytes() - WALObjectHeader.WAL_HEADER_SIZE;
+            if (retainedBytesInBatch <= RecordHeader.RECORD_HEADER_SIZE) {
+                break;
+            }
+
+            Record record = bufferQueue.poll();
+
+            // Records larger than the batch size will be uploaded immediately.
+            if (record.record.readableBytes() >= config.maxBytesInBatch() - WALObjectHeader.WAL_HEADER_SIZE) {
+                dataBuffer.addComponent(true, record.record);
+                recordList.add(record);
+                break;
+            }
+
+
+            if (record.record.readableBytes() > retainedBytesInBatch) {
+                // The records will be split into multiple objects.
+                ByteBuf slice = record.record.retainedSlice(0, (int) retainedBytesInBatch).asReadOnly();
+                dataBuffer.addComponent(true, slice);
+
+                // Update the record buffer and offset.
+                record.record.skipBytes((int) retainedBytesInBatch);
+                record.offset += retainedBytesInBatch;
+                bufferQueue.offerFirst(record);
+                break;
+            }
+
+            dataBuffer.addComponent(true, record.record);
+            recordList.add(record);
+        }
+
+        // Build object buffer.
+        long firstOffset = recordList.get(0).offset;
+        long dataLength = dataBuffer.readableBytes();
         // Exclusive end offset
-        long endOffset = lastRecord.offset + lastRecord.record.readableBytes();
+        long endOffset = firstOffset + dataLength;
 
-        long dataLength = lastRecord.offset + lastRecord.record.readableBytes() - firstOffset;
+        CompositeByteBuf objectBuffer = ByteBufAlloc.compositeByteBuffer();
+        WALObjectHeader header = new WALObjectHeader(firstOffset, dataLength, 0L, config.nodeId(), config.epoch());
+        objectBuffer.addComponent(true, header.marshal());
+        objectBuffer.addComponent(true, dataBuffer);
 
-        CompositeByteBuf buffer = ByteBufAlloc.compositeByteBuffer();
-        WALObjectHeader header = new WALObjectHeader(firstOffset, dataLength, lastRecord.offset, config.nodeId(), config.epoch());
-        buffer.addComponent(true, header.marshal());
-
-        bufferList.forEach(record -> buffer.addComponent(true, record.record));
-        int objectLength = buffer.readableBytes();
-
-        // Clean up records.
-        uploadMap.put(firstOffset, bufferList);
-        bufferList = new LinkedList<>();
+        // Trigger upload.
+        int objectLength = objectBuffer.readableBytes();
+        uploadMap.put(firstOffset, recordList);
 
         String path = objectPrefix + firstOffset;
-        CompletableFuture<ObjectStorage.WriteResult> uploadFuture = objectStorage.write(new ObjectStorage.WriteOptions().enableFastRetry(true), path, buffer);
+        CompletableFuture<ObjectStorage.WriteResult> uploadFuture = objectStorage.write(new ObjectStorage.WriteOptions().enableFastRetry(true), path, objectBuffer);
 
         CompletableFuture<Void> finalFuture = recordUploadMetrics(uploadFuture, startTime, objectLength)
             .thenAccept(v -> {
@@ -391,8 +427,8 @@ public class RecordAccumulator implements Closeable {
                     // Update flushed offset
                     if (!uploadMap.isEmpty()) {
                         flushedOffset = uploadMap.firstKey();
-                    } else if (!bufferList.isEmpty()) {
-                        flushedOffset = bufferList.get(0).offset;
+                    } else if (!bufferQueue.isEmpty()) {
+                        flushedOffset = bufferQueue.getFirst().offset;
                     } else {
                         flushedOffset = nextOffset;
                     }
@@ -419,7 +455,8 @@ public class RecordAccumulator implements Closeable {
         lastUploadTimestamp = System.currentTimeMillis();
     }
 
-    protected CompletableFuture<ObjectStorage.WriteResult> recordUploadMetrics(CompletableFuture<ObjectStorage.WriteResult> future,
+    protected CompletableFuture<ObjectStorage.WriteResult> recordUploadMetrics(
+        CompletableFuture<ObjectStorage.WriteResult> future,
         long startTime, long objectLength) {
         return future.whenComplete((result, throwable) -> {
             ObjectWALMetricsManager.recordOperationLatency(time.nanoseconds() - startTime, "upload", throwable == null);
@@ -428,7 +465,7 @@ public class RecordAccumulator implements Closeable {
     }
 
     protected static class Record {
-        public final long offset;
+        public long offset;
         public final ByteBuf record;
         public final CompletableFuture<AppendResult.CallbackResult> future;
 
